View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025483 | Open CASCADE | OCCT:Visualization | public | 2014-11-14 17:23 | 2015-05-14 15:33 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025483: Visualization, TKOpenGl - fix memory leak due to unused stack in OpenGl_StateInterface | ||||
Description | OpenGl_StateInterface::Revert() is no more called after matrices redesign 0024381 leading to infinite memory growth on each redraw call with GLSL programs in use. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25483 has been created by kgv. SHA-1: 312c3ffd028feee3a0ae7c6139bd414c9e4c5aef Detailed log of new commits: Author: kgv Date: Fri Nov 14 17:24:56 2014 +0300 0025483: Visualization, TKOpenGl - fix memory leak due to unused stack in OpenGl_StateInterface |
|
Patch is ready for review in branch CR25483. |
|
Dear bugmaster, Patch is ready for testing. |
|
Dear BugMaster, Branch CR25483 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 312c3ffd028feee3a0ae7c6139bd414c9e4c5aef Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 1 (1 on master) products component : Linux: 11 (11 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 358894184 / 358093264 Total CPU difference: 47402.15999999988 / 47953.899999999994 products component : Total MEMORY difference: 112287484 / 112086476 Total CPU difference: 16468.869999999977 / 17478.10999999997 Testing on Windows: occt component : Total MEMORY difference: 273033916 / 272544120 Total CPU difference: 37536.46875 / 36968.953125 products component : Total MEMORY difference: 72218172 / 71070524 Total CPU difference: 11293.21875 / 11430.265625 There are no differences in images found by testdiff. |
|
Branch CR25483 has been deleted by inv. SHA-1: 312c3ffd028feee3a0ae7c6139bd414c9e4c5aef |
occt: master 8cf06aa2 2014-11-14 14:24:56 Committer: bugmaster Details Diff |
0025483: Visualization, TKOpenGl - fix memory leak due to unused stack in OpenGl_StateInterface |
Affected Issues 0025483 |
|
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderStates.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderStates.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace_5.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-11-14 17:23 | kgv | New Issue | |
2014-11-14 17:23 | kgv | Assigned To | => kgv |
2014-11-14 17:23 | kgv | Relationship added | child of 0024381 |
2014-11-14 17:25 | git | Note Added: 0034429 | |
2014-11-14 17:26 | kgv | Note Added: 0034430 | |
2014-11-14 17:26 | kgv | Assigned To | kgv => duv |
2014-11-14 17:26 | kgv | Status | new => resolved |
2014-11-14 17:29 | kgv | Relationship added | child of 0025146 |
2014-11-17 10:39 |
|
Note Added: 0034444 | |
2014-11-17 10:39 |
|
Assigned To | duv => bugmaster |
2014-11-17 10:39 |
|
Status | resolved => reviewed |
2014-11-17 14:28 |
|
Assigned To | bugmaster => mkv |
2014-11-18 15:14 |
|
Note Added: 0034478 | |
2014-11-18 15:15 |
|
Test case number | => Not needed |
2014-11-18 15:15 |
|
Assigned To | mkv => bugmaster |
2014-11-18 15:15 |
|
Status | reviewed => tested |
2014-11-25 10:29 | bugmaster | Changeset attached | => occt master 8cf06aa2 |
2014-11-25 10:29 | bugmaster | Status | tested => verified |
2014-11-25 10:29 | bugmaster | Resolution | open => fixed |
2014-11-28 13:45 | git | Note Added: 0034818 | |
2015-01-19 16:23 | bugmaster | Target Version | 7.1.0 => 6.9.0 |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:33 |
|
Fixed in Version | => 6.9.0 |