0025483: Visualization, TKOpenGl - fix memory leak due to unused stack in OpenGl_StateInterface